--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,5 +9,4 @@ Description: More about what it does (maybe more than one line)
 License: What license is it under?
 RoxygenNote: 6.1.1
 Imports: 
-    chron,
-    rpanel
+    chron
